package com.erp.qualitascareapi.cme.enums;

public enum ExameCulturaResultado {
    PENDENTE,
    NEGATIVO,
    POSITIVO,
    INVALIDO
}
