package com.erp.qualitascareapi.cme.enums;

public enum LoteStatus {
    MONTADO,
    EM_PROCESSO,
    LIBERADO,
    BLOQUEADO,
    VENCIDO
}
