package com.erp.qualitascareapi.cme.enums;

public enum MovimentacaoTipo {
    ENTRADA_CONTAMINADO,
    ENVIO_ESTERIL,
    RETORNO_CONTAMINADO,
    DESCARTE
}
