package com.erp.qualitascareapi.cme.enums;

public enum NaoConformidadeSeveridade {
    BAIXA,
    MEDIA,
    ALTA,
    CRITICA
}
