package com.erp.qualitascareapi.cme.enums;

public enum NaoConformidadeStatus {
    ABERTA,
    EM_INVESTIGACAO,
    EM_IMPLEMENTACAO,
    CONCLUIDA,
    CANCELADA
}
