package com.erp.qualitascareapi.core.enums;

public enum TipoSetor {
    CME,
    CC,
    UTI,
    ENFERMARIA,
    FARMACIA,
    HOTELARIA,
    MANUTENCAO,
    PS
}
