package com.erp.qualitascareapi.environmental.enums;

public enum ClasseResiduo {
    PERFUROCORTANTE,
    BIOLOGICO,
    QUIMICO,
    RECICLAVEL,
    COMUM
}
