@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "core.domain" {
  enum TipoSetor {
    CME
    CC
    UTI
    ENFERMARIA
    FARMACIA
    HOTELARIA
    MANUTENCAO
    PS
  }

  enum ExameCulturaResultado {
    PENDENTE
    NEGATIVO
    POSITIVO
    INVALIDO
  }

  class Setor {
    +id: Long
    +nome: String
    +tipo: TipoSetor
    +descricao: String
  }

  class Instrumento {
    +id: Long
    +nome: String
    +codigoHospitalar: String
    +descricao: String
  }

  class KitProcedimento {
    +id: Long
    +nome: String
    +codigo: String
    +observacoes: String
    +ativo: Boolean
  }

  class KitVersion {
    +id: Long
    +numeroVersao: Integer
    +vigenciaInicio: LocalDate
    +validadeDias: Integer
    +ativo: Boolean
    +observacoes: String
  }

  class KitItem {
    +id: Long
    +quantidade: Integer
    +observacoes: String
  }

  class ExameCultura {
    +id: Long
    +origemAmostra: String
    +dataColeta: LocalDate
    +responsavelColeta: String
    +resultado: ExameCulturaResultado
  }

  KitProcedimento "1" -- "0..*" KitVersion
  KitVersion "1" -- "0..*" KitItem
  Instrumento "1" -- "0..*" KitItem
}

package "quality.domain" {
  enum NaoConformidadeStatus {
    ABERTA
    EM_INVESTIGACAO
    EM_IMPLEMENTACAO
    CONCLUIDA
    CANCELADA
  }

  interface NaoConformidadeBase {
    +getId(): Long
    +getTitulo(): String
    +getStatus(): NaoConformidadeStatus
  }

  class TipoNaoConformidade {
    +id: Long
    +nome: String
    +descricao: String
  }
}

package "environmental.domain" {
  enum ClasseResiduo {
    PERFUROCORTANTE
    BIOLOGICO
    QUIMICO
    RECICLAVEL
    COMUM
  }

  class GeracaoResiduo {
    +id: Long
    +dataRegistro: LocalDate
    +classeResiduo: ClasseResiduo
    +pesoEstimadoKg: Double
    +destinoFinal: String
  }
}

package "cme.domain" {
  class LoteEtiqueta {
    +id: Long
    +codigo: String
    +status: LoteStatus
  }

  class MovimentacaoCME {
    +id: Long
    +tipo: MovimentacaoTipo
    +dataHora: LocalDateTime
    +observacoes: String
  }

  class NaoConformidadeCME {
    +id: Long
    +titulo: String
    +descricao: String
    +severidade: NaoConformidadeSeveridade
    +status: NaoConformidadeStatus
  }

  enum MovimentacaoTipo
  enum LoteStatus
  enum NaoConformidadeSeveridade
}

MovimentacaoCME "*" --> "0..1" LoteEtiqueta : lote
MovimentacaoCME "*" --> "0..1" Setor : origem
MovimentacaoCME "*" --> "0..1" Setor : destino

NaoConformidadeCME ..|> NaoConformidadeBase
NaoConformidadeCME --> TipoNaoConformidade
ExameCultura "*" -- "*" "EvidenciaArquivo" #..#
GeracaoResiduo --> LoteEtiqueta

@enduml
